add product description, remove scroll bar

--- a/views/partials/_scriptLoader.ejs
+++ b/views/partials/_scriptLoader.ejs
@@ -8,3 +8,6 @@
 <script src="/js/plugins.js"></script>
 <!-- Active js -->
 <script src="/js/active.js"></script>
+<!-- Custom js -->
+<script src="/js/custom/index.js"></script>
+<script src="/js/custom/common.js"></script>
