--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,7 @@
     /* ---------------------------------------
     ##### - PLACE YOUR CUSTOM CSS HERE - #####
     --------------------------------------- */
+
+    .hidden-description {
+        visibility: hidden
+    }
