--- a/views/screens/index/_product.ejs
+++ b/views/screens/index/_product.ejs
@@ -2,7 +2,7 @@
   <div class="amado-pro-catagory clearfix">
 
     <!-- Single Catagory -->
-    <div class="single-products-catagory clearfix">
+    <div class="single-products-catagory clearfix" onmouseover="showDescription('product1')" onmouseout="hideDescription('product1')">
       <a href="shop.html">
         <img src="img/bg-img/1.jpg" alt="">
         <!-- Hover Content -->
@@ -10,12 +10,13 @@
           <div class="line"></div>
           <p>From $180</p>
           <h4>Modern Chair</h4>
+          <p class="hidden-description" id="product1">This is description</p>
         </div>
       </a>
     </div>
 
     <!-- Single Catagory -->
-    <div class="single-products-catagory clearfix">
+    <div class="single-products-catagory clearfix" onmouseover="showDescription('product2')" onmouseout="hideDescription('product2')">
       <a href="shop.html">
         <img src="img/bg-img/2.jpg" alt="">
         <!-- Hover Content -->
@@ -23,6 +24,7 @@
           <div class="line"></div>
           <p>From $180</p>
           <h4>Minimalistic Plant Pot</h4>
+          <p class="hidden-description" id="product2">This is description</p>
         </div>
       </a>
     </div>
