--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,31 +1,35 @@
 <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed:100,200,300,400" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+  crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
 
 <body class="loading">
-  <h1>500</h1>
-  <h2>Unexpected Error <b>:(</b></h2>
-  <div class="gears">
-    <div class="gear one">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
+  <div class="container">
+    <h1>500</h1>
+    <h2>Unexpected Error <b>:(</b></h2>
+    <div style="text-align:center;">
+      <a href="/" class="btn btn-outline-primary btn-lg">Home Page</a>
     </div>
-    <div class="gear two">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
-    <div class="gear three">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
+    <div class="gears">
+      <div class="gear one">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <div class="gear two">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <div class="gear three">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
     </div>
   </div>
 
-  <div>
-    <% {message}%>
-    <% {error.status}%>
-    <% {error.stack}%>
-  </div>
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="/js/500.js" type="text/javascript"></script>
