--- a/views/screens/index/_product.ejs
+++ b/views/screens/index/_product.ejs
@@ -11,7 +11,7 @@
         <div class="hover-content">
           <div class="line"></div>
           <p>
-            <%= products[i].price %>
+            VND <%= products[i].price %>
           </p>
           <h4>
             <%= products[i].name %>
